OCU-1049 Remove -XX:MaxPermSize=256M because it is not supporting in Java 8