@@ -17,7 +17,7 @@ ScriptedPlugin.scriptedSettings
 
 scriptedLaunchOpts := {
   scriptedLaunchOpts.value ++
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+  Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
 }
 
 scriptedBufferLog := false
